# haCCA

./: .gitignore  README.md  V11L12-109_direct_merge.ipynb  V11L12038_direct_merge.ipynb  Variance.py  cca.py  dev-requirements.in  m3_9AA_VisiumArray_m3_visium_ctrl_merge_correlation.ipynb  m4_FPM_VisiumArray_m4_visium_FPM_merge.ipynb  metabolic_to_anndata.ipynb  pyproject.toml  requirements.in  spatial.cca.ipynb  spatial_to_h5ad.ipynb  traindatagenerator.ipynb
.github/workflow/: publish.yml
.github/workflows/: build.yml  publish.yml
data/: A1.h5ad  A2.h5ad  M1.h5ad  M2.h5ad  m3_9AA_VisiumArray.h5ad  m3_visium_ctrl.h5ad
example/: ICC.ipynb  Untitled.ipynb  comparasion_between_haCCA_and_other_alignment_method.ipynb  comparasion_between_haCCA_and_other_alignment_method.md  integrating spatial transcriptome into MSI-MALDI.ipynb  integrating spatial transcriptome into MSI-MALDI.md
hacca/: __init__.py  _alignment_test.py  _loss_test.py  _util_test.py  alignment.py  alignment_test.py  data.py  hacca.py  loss.py  utils.py  version.py
notebook/: UMAP_alignment.ipynb  Untitled.ipynb  V11T16-085_direct_merge.ipynb  m3_9AA_VisiumArray_m3_visium_ctrl_merge_correlation.ipynb  m4_FPM_VisiumArray_m4_visium_FPM_merge.ipynb  mutiomics.py  traindatagenerator.ipynb
notebook/ICC_merge/: ICC_ITO_clusters1.ipynb  ICC_ITO_clusters2.ipynb  ICC_hacca_merge.ipynb  ICC_haccamerge_transcripts_metabolites_co_analysis.ipynb  ICC_spatial_transcripts_clusters.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  analysis.ipynb  extract_merge_matrix_X.ipynb  (+1 more)
revision/: stalign_accu.ipynb
(+2 files in other folders)
